@@ -1,3 +1,11 @@
+2016-01-24  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/66094
+	* gfortran.dg/inline_matmul_13.f90:  New test.
+	* gfortran.dg/matmul_bounds_8.f90:  New test.
+	* gfortran.dg/matmul_bounds_9.f90:  New test.
+	* gfortran.dg/matmul_bounds_10.f90:  New test.
+
 2016-01-23  Tom de Vries  <tom@codesourcery.com>
 
 	PR tree-optimization/69426
